# Macrosphere

./: .gitignore  BUILD_SUMMARY.md  FILE_INVENTORY.md  FILE_STRUCTURE.md  IMPROVEMENTS.md  PROJECT_COMPLETE.md  PROJECT_MANIFEST.md  QUICK_START.md  README.md  SETUP_GUIDE.md  docker-compose.yml  render.yaml  setup.bat  setup.sh  vercel.json
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  schemas.py
backend/app/api/: __init__.py  analysis.py  market_data.py  scenarios.py  simulations.py
backend/app/db/: database.py
backend/app/engines/: __init__.py  allocation_engine.py  insight_engine.py  scenario_engine.py  score_engine.py  simulation_engine.py
backend/app/models/: __init__.py  base.py  scenario.py  simulation.py  user.py
backend/app/utils/: __init__.py  helpers.py
backend/tests/: test_api.py  test_engines.py  test_score_engine.py
docs/: DEPLOYMENT.md
frontend/: .gitignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(routes)/: layout.tsx
frontend/src/app/(routes)/allocation/: page.tsx
frontend/src/app/(routes)/factors/: page.tsx
frontend/src/components/: Charts.tsx  GlossaryModal.tsx  Header.tsx  InfoTooltip.tsx  KPICards.tsx  MacroInputPanel.tsx  PageExplainer.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  store.ts
frontend/src/types/: index.ts
frontend/src/utils/: helpers.ts
(+4 files in other folders)
