[tool.poetry]
name = "macrosphere"
version = "1.0.0"
description = "AI-Powered India Macro Allocation Engine"
authors = ["Prateek Tyagi <prateek@macrosphere.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
openai = "^1.3.0"
numpy = "^1.26.2"
scipy = "^1.11.4"
pandas = "^2.1.3"
redis = "^5.0.1"
python-multipart = "^0.0.6"
aiohttp = "^3.9.1"
aiosqlite = "^0.19.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
httpx = "^0.25.2"
pillow = "^10.1.0"
reportlab = "^4.0.7"
yfinance = "^1.3.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=html --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
